[Monteiro] Subida de versão .NET de 5 para 6. Remoção temporária dos projetos de testes.

--- a/SF.SGL.UI/Pages/Cadastros/Sistemas/ConsultaSistemas/ConsultaSistemas.razor
+++ b/SF.SGL.UI/Pages/Cadastros/Sistemas/ConsultaSistemas/ConsultaSistemas.razor
@@ -35,10 +35,10 @@ else if (sistemas != null || erroRetornoAPI?.Message != null)
                                 TItem="Sistema">
 
                             <Columns>
-                                <RadzenDataGridColumn TItem="Sistema" Property="Id" Filterable="true" Title="ID" Frozen="false" Width="70px" TextAlign="TextAlign.Center" />
-                                <RadzenDataGridColumn TItem="Sistema" Property="Nome" Title="Nome" />
+                                <RadzenDataGridColumn TItem="Sistema" Property="Id" Filterable="true" Title="ID" Frozen="false" Width="100px" TextAlign="TextAlign.Center" />
+                                <RadzenDataGridColumn TItem="Sistema" Property="Nome" Title="Nome" Width="250px"  />
                                 <RadzenDataGridColumn TItem="Sistema" Property="UrlServicoConsultaLog" Title="Url Servico ConsultaLog" />
-                                <RadzenDataGridColumn TItem="Sistema" Property="UsuarioLogin" Title="Usuario Login" />
+                                <RadzenDataGridColumn TItem="Sistema" Property="UsuarioLogin" Title="Usuario Login" Width="200px"/>
 
                                 <RadzenDataGridColumn TItem="Sistema" Filterable="false" Sortable="false" Width="90px" TextAlign="TextAlign.Center">
                                     <Template Context="edicao">
