[Monteiro] - Termino da funcionalidade de consulta de log de operação.

--- a/SF.SGL.UI/Pages/Consultas/LogAuditoria/ConsultaLogAuditoria/AuxPesquisaSistema.razor
+++ b/SF.SGL.UI/Pages/Consultas/LogAuditoria/ConsultaLogAuditoria/AuxPesquisaSistema.razor
@@ -1,5 +1,8 @@
 ﻿@layout MainLayout
 
+@using Radzen
+@using Radzen.Blazor
+
 @if (Sistemas == null)
 {
     <RadzenProgressBar Value="100" ShowValue="false" Mode="ProgressBarMode.Indeterminate" Style="margin-bottom: 20px" />
