--- a/SF.SGL.UI/Shared/MainLayout.razor
+++ b/SF.SGL.UI/Shared/MainLayout.razor
@@ -57,7 +57,7 @@
                 <RadzenPanelMenuItem Text="Consultas">
                     <ChildContent>
                         <RadzenPanelMenuItem Text="Log de Operação" Path="/Consultas/LogOperacao/ConsultaLogOperacao"></RadzenPanelMenuItem>
-                        <RadzenPanelMenuItem Text="Log de Auditoria"></RadzenPanelMenuItem>
+                        <RadzenPanelMenuItem Text="Log de Auditoria"  Path="/Consultas/LogAuditoria/ConsultaLogAuditoria"></RadzenPanelMenuItem>
                     </ChildContent>
                 </RadzenPanelMenuItem>
                   <RadzenPanelMenuItem Text="Controle Dev">
