--- a/SF.SGL.UI/Pages/Consultas/LogAuditoria/ConsultaLogAuditoria/ConsultaLogAuditoria.razor
+++ b/SF.SGL.UI/Pages/Consultas/LogAuditoria/ConsultaLogAuditoria/ConsultaLogAuditoria.razor
@@ -1,4 +1,4 @@
-﻿@page "/Consultas/LogOperacao/ConsultaLogOperacao"
+﻿@page "/Consultas/LogAuditoria/ConsultaLogAuditoria"
 
 @layout MainLayout
 
@@ -13,12 +13,12 @@
 else if (Sistemas != null || erroRetornoAPI?.Message != null)
 {
     <RadzenProgressBar Value="100" ShowValue="false" Max="100" Style="margin-bottom: 20px" />
-    <RadzenHeading Size="H2" Text="Consultar Log Operação"></RadzenHeading>
+    <RadzenHeading Size="H2" Text="Consultar Log Auditoria"></RadzenHeading>
     @if (Sistemas != null)
     {
         <RadzenContent Container="main">
             <ChildContent>
-                <RadzenTemplateForm Data="@parametroConsultaLogOperacao" Visible="@(parametroConsultaLogOperacao != null)" TItem="ParametroConsultaLogOperacao" Submit="@EnviarFormulario">
+                <RadzenTemplateForm Data="@parametroConsultaLogAuditoria" Visible="@(parametroConsultaLogAuditoria != null)" TItem="ParametroConsultaLogAuditoria" Submit="@EnviarFormulario">
                     <ChildContent>
                         <div class="row">
                             <div class="col-md-6">
@@ -28,7 +28,7 @@ else if (Sistemas != null || erroRetornoAPI?.Message != null)
                                             <RadzenLabel Text="Nome Sistema:" style="display:inline-block;width: 45%;overflow: hidden;text-overflow: ellipsis;"></RadzenLabel>
                                         </div>
                                         <div class="col-md-12">
-                                            <RadzenDropDown Name="txtIdSistema" AllowClear="true" AllowFiltering="true" Placeholder="Selecione" FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive" Data=@Sistemas TextProperty="Nome" ValueProperty="Id" @bind-Value=@parametroConsultaLogOperacao.SistemaId Style="width:450px" />
+                                            <RadzenDropDown Name="txtIdSistema" AllowClear="true" AllowFiltering="true" Placeholder="Selecione" FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive" Data=@Sistemas TextProperty="Nome" ValueProperty="Id" @bind-Value=@parametroConsultaLogAuditoria.SistemaId Style="width:450px" />
                                         </div>
                                         <div class="col-md-12">
                                             <RadzenRequiredValidator Component="txtIdSistema" Text="É necessário informar um sistema." style="position: absolute"></RadzenRequiredValidator>
@@ -57,7 +57,7 @@ else if (Sistemas != null || erroRetornoAPI?.Message != null)
                                             <RadzenLabel Text="Identificador Usuário:" style="display:inline-block;width: 100%;overflow: hidden;text-overflow: ellipsis;"></RadzenLabel>
                                         </div>
                                         <div class="col-md-12">
-                                            <RadzenTextBox Name="txtIdentificadorUsuario" @bind-Value="@parametroConsultaLogOperacao.CodigoIdentificadorUsuario" MaxLength="100" style="display: inline-block; width: 100%"></RadzenTextBox>
+                                            <RadzenTextBox Name="txtIdentificadorUsuario" @bind-Value="@parametroConsultaLogAuditoria.CodigoIdentificadorUsuario" MaxLength="100" style="display: inline-block; width: 100%"></RadzenTextBox>
                                         </div>
                                     </div>
 
@@ -67,48 +67,20 @@ else if (Sistemas != null || erroRetornoAPI?.Message != null)
                                                 <RadzenLabel Text="Funcionalidade:" style="display:inline-block;width: 100%;overflow: hidden;text-overflow: ellipsis;"></RadzenLabel>
                                             </div>
                                             <div class="col-md-12" style="padding-left: 0px;padding-right: 0px">
-                                                <RadzenTextBox Name="txtFuncionalidade" @bind-Value="@parametroConsultaLogOperacao.Funcionalidade" MaxLength="100" style="display: inline-block; width:  100%"></RadzenTextBox>
+                                                <RadzenTextBox Name="txtFuncionalidade" @bind-Value="@parametroConsultaLogAuditoria.Funcionalidade" MaxLength="100" style="display: inline-block; width:  100%"></RadzenTextBox>
                                             </div>
                                         </div>
 
                                         <div class="col-md-2" style="padding-left: 3px;padding-right: 3px;">
                                             <div class="col-md-12" style="padding-left: 0px;padding-right: 0px">
-                                                <RadzenLabel Text="Tipo do Registro:" style="display:inline-block;width: 100%;overflow: hidden;text-overflow: ellipsis;"></RadzenLabel>
+                                                <RadzenLabel Text="Operação:" style="display:inline-block;width: 100%;overflow: hidden;text-overflow: ellipsis;"></RadzenLabel>
                                             </div>
                                             <div class="col-md-12" style="padding-left: 0px;padding-right: 0px">
-                                                <RadzenDropDown Data="@tipoRegistros" @bind-Value="@tipoRegistro" Style="width:100%" />
+                                                <RadzenDropDown Data="@tiposOperacao" @bind-Value="@tipoOperacao" Style="width:100%" />
                                             </div>
-                                        </div>
-
-                                        <div class="col-md-2" style="padding-left: 0px;padding-right: 0px">
-                                            <div class="col-md-12" style="padding-left: 0px;padding-right: 0px">
-                                                <RadzenLabel Text="Subtipo do Registro:" style="display:inline-block;width: 100%;overflow: hidden;text-overflow: ellipsis;"></RadzenLabel>
-                                            </div>
-                                            <div class="col-md-12" style="padding-left: 0px;padding-right: 0px">
-                                                <RadzenDropDown Data="@subTipoRegistros" @bind-Value="@subTipoRegistro" Style="width:100%" />
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div style="margin-bottom: 1rem" class="row">
-                                        <div class="col-md-12">
-                                            <RadzenLabel Text="Mensagem:" style="display:inline-block;width: 100%;overflow: hidden;text-overflow: ellipsis;"></RadzenLabel>
-                                        </div>
-                                        <div class="col-md-12">
-                                            <RadzenTextBox Name="txtMensagemErro" @bind-Value="@parametroConsultaLogOperacao.MensagemErro" MaxLength="100" style="display: inline-block; width: 100%"></RadzenTextBox>
-                                        </div>
-                                    </div>
-
-                                    <div style="margin-bottom: 1rem" class="row">
-                                        <div class="col-md-12">
-                                            <RadzenLabel Text="Exceção Capturada:" style="display:inline-block;width: 100%;overflow: hidden;text-overflow: ellipsis;"></RadzenLabel>
-                                        </div>
-                                        <div class="col-md-12">
-                                            <RadzenTextBox Name="txtExcecaoCapturada" @bind-Value="@parametroConsultaLogOperacao.ExcecaoCapturada" MaxLength="100" style="display: inline-block; width: 100%"></RadzenTextBox>
                                         </div>
                                     </div>
                                     <br />
-
                                     <div class="row">
                                         <div class="col-md-12" style="display:flex; justify-content:flex-end; width:100%;">
                                             <RadzenButton ButtonStyle="ButtonStyle.Secondary" Icon="close" Text="Limpar" Click="@LimparConsulta" Style="width: 175px; margin-right:5px" Disabled=@DesabilitarBtnLimpar></RadzenButton>
@@ -126,7 +98,7 @@ else if (Sistemas != null || erroRetornoAPI?.Message != null)
         </RadzenContent>
         <br />
 
-        @if (LogsOperacoes == null && BuscandoRegistros == true)
+        @if (LogsAuditoria == null && BuscandoRegistros == true)
         {
             <RadzenProgressBar Value="100" ShowValue="false" Mode="ProgressBarMode.Indeterminate" Style="margin-bottom: 20px" />
             <h4>Carregando...</h4>
@@ -139,7 +111,7 @@ else if (Sistemas != null || erroRetornoAPI?.Message != null)
                 <ChildContent>
                     <div class="row">
                         <div class="col-md-12">
-                            <RadzenDataGrid @ref="GridConsultaLogOperacao"
+                            <RadzenDataGrid @ref="GridConsultaLogAuditoria"
                                 AllowFiltering="true"
                                 AllowColumnResize="true"
                                 EmptyText="A pesquisa não retornou resultados."
@@ -151,16 +123,16 @@ else if (Sistemas != null || erroRetornoAPI?.Message != null)
                                 FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive"
                                 LogicalFilterOperator="LogicalFilterOperator.Or"
                                 AllowVirtualization="true"
-                                Data="@LogsOperacoes"
-                                TItem="LogOperacao">
+                                Data="@LogsAuditoria"
+                                TItem="LogAuditoria">
 
                                 <Columns>
-                                    <RadzenDataGridColumn TItem="LogOperacao" Property="CodigoLogOperacao" Filterable="true" Title="CÓDIGO DO LOG" Frozen="false" Width="100px" TextAlign="TextAlign.Center" />
-                                    <RadzenDataGridColumn TItem="LogOperacao" Property="DataOcorrencia" Title="DATA/HORA" Width="150px" />
-                                    <RadzenDataGridColumn TItem="LogOperacao" Property="CodigoIdentificadorUsuario" Title="IDENTIFICADOR USUÁRIO" Width="100px" />
-                                    <RadzenDataGridColumn TItem="LogOperacao" Property="NomeFuncionalidade" Title="FUNCIONALIDADE" Width="300px" />
-                                    <RadzenDataGridColumn TItem="LogOperacao" Property="MensagemErro" Title="MENSAGEM" Width="400px" />
-                                    <RadzenDataGridColumn TItem="LogOperacao" Property="ExcecaoCapturada" Title="EXCEÇÃO CAPTURADA" Width="400px" />
+                                    <RadzenDataGridColumn TItem="LogAuditoria" Property="CodigoLogAuditoria" Filterable="true" Title="CÓDIGO DO LOG" Frozen="false" Width="100px" TextAlign="TextAlign.Center" />
+                                    <RadzenDataGridColumn TItem="LogAuditoria" Property="DataOcorrencia" Title="DATA/HORA" Width="150px" />
+                                    <RadzenDataGridColumn TItem="LogAuditoria" Property="CodigoIdentificadorUsuario" Title="IDENTIFICADOR USUÁRIO" Width="100px" />
+                                    <RadzenDataGridColumn TItem="LogAuditoria" Property="NomeFuncionalidade" Title="FUNCIONALIDADE" Width="300px" />
+                                    <RadzenDataGridColumn TItem="LogAuditoria" Property="NomeOperacao" Title="OPERAÇÃO" Width="400px" />
+                                    <RadzenDataGridColumn TItem="LogAuditoria" Property="Conteudo" Title="CONTEUDO" Width="400px" />
                                 </Columns>
                             </RadzenDataGrid>
                         </div>
