--- a/SF.SGL.UI/Shared/MainLayout.razor
+++ b/SF.SGL.UI/Shared/MainLayout.razor
@@ -43,7 +43,8 @@
                 <RadzenPanelMenuItem Text="Home" Path="/"></RadzenPanelMenuItem>
                 <RadzenPanelMenuItem Text="Cadastros">
                     <ChildContent>
-                        <RadzenPanelMenuItem Text="Sistemas" Path="Cadastros/Sistemas"></RadzenPanelMenuItem>
+                        <RadzenPanelMenuItem Text="Monitoramentos" Path="/cadastros/monitoramentos"></RadzenPanelMenuItem>
+                        <RadzenPanelMenuItem Text="Sistemas" Path="/cadastros/sistemas"></RadzenPanelMenuItem>
                     </ChildContent>
                 </RadzenPanelMenuItem>
                 <RadzenPanelMenuItem Text="Parametrizações">
@@ -56,8 +57,8 @@
                 </RadzenPanelMenuItem>
                 <RadzenPanelMenuItem Text="Consultas">
                     <ChildContent>
-                        <RadzenPanelMenuItem Text="Log de Operação" Path="/Consultas/LogOperacao/ConsultaLogOperacao"></RadzenPanelMenuItem>
-                        <RadzenPanelMenuItem Text="Log de Auditoria"  Path="/Consultas/LogAuditoria/ConsultaLogAuditoria"></RadzenPanelMenuItem>
+                        <RadzenPanelMenuItem Text="Log de Operação" Path="/consultas/logOperacao/consultaLogOperacao"></RadzenPanelMenuItem>
+                        <RadzenPanelMenuItem Text="Log de Auditoria"  Path="/consultas/logAuditoria/consultaLogAuditoria"></RadzenPanelMenuItem>
                     </ChildContent>
                 </RadzenPanelMenuItem>
                   <RadzenPanelMenuItem Text="Controle Dev">
