[Monteiro] - Adição Mock rascunho, CacheAPI, SignalRAPI.

--- a/SF.SGL.UI/Shared/MainLayout.razor
+++ b/SF.SGL.UI/Shared/MainLayout.razor
@@ -43,8 +43,8 @@
                 <RadzenPanelMenuItem Text="Home" Path="/"></RadzenPanelMenuItem>
                 <RadzenPanelMenuItem Text="Cadastros">
                     <ChildContent>
-                        <RadzenPanelMenuItem Text="Monitoramentos" Path="/cadastros/monitoramentos"></RadzenPanelMenuItem>
-                        <RadzenPanelMenuItem Text="Sistemas" Path="/cadastros/sistemas"></RadzenPanelMenuItem>
+                        <RadzenPanelMenuItem Text="Monitoramentos" Path="/Cadastros/Monitoramentos"></RadzenPanelMenuItem>
+                        <RadzenPanelMenuItem Text="Sistemas" Path="/Cadastros/Sistemas"></RadzenPanelMenuItem>
                     </ChildContent>
                 </RadzenPanelMenuItem>
                 <RadzenPanelMenuItem Text="Parametrizações">
@@ -57,8 +57,9 @@
                 </RadzenPanelMenuItem>
                 <RadzenPanelMenuItem Text="Consultas">
                     <ChildContent>
-                        <RadzenPanelMenuItem Text="Log de Operação" Path="/consultas/logOperacao/consultaLogOperacao"></RadzenPanelMenuItem>
-                        <RadzenPanelMenuItem Text="Log de Auditoria"  Path="/consultas/logAuditoria/consultaLogAuditoria"></RadzenPanelMenuItem>
+                        <RadzenPanelMenuItem Text="Log de Auditoria"  Path="/Consultas/LogAuditoria/ConsultaLogAuditoria"></RadzenPanelMenuItem>
+                        <RadzenPanelMenuItem Text="Log de Exec. de Monitoramento"  Path="/Consultas/LogExecucaoMonitoramento/ConsultaLogExecucaoMonitoramento"></RadzenPanelMenuItem>
+                        <RadzenPanelMenuItem Text="Log de Operação" Path="/Consultas/LogOperacao/ConsultaLogOperacao"></RadzenPanelMenuItem>
                     </ChildContent>
                 </RadzenPanelMenuItem>
                   <RadzenPanelMenuItem Text="Controle Dev">
