--- a/SF.SGL.UI/Pages/Cadastros/Monitoramentos/AdicionaMonitoramento/AdicionaMonitoramento.razor
+++ b/SF.SGL.UI/Pages/Cadastros/Monitoramentos/AdicionaMonitoramento/AdicionaMonitoramento.razor
@@ -18,10 +18,10 @@
                                             <RadzenLabel Text="Nome Sistema:" style="width: 100%"></RadzenLabel>
                                         </div>
                                         <div class="col-md-12">
-                                            <RadzenDropDown Name="txtIdSistema" AllowClear="true" AllowFiltering="true" Placeholder="Selecione" FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive" Data=@Sistemas TextProperty="Nome" ValueProperty="Id" @bind-Value=@monitoramento.SistemaId style="display: block; width: 75%" />
+                                            <RadzenDropDown Name="drpSistemas" AllowClear="true" AllowFiltering="true" Placeholder="Selecione" FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive" Data=@Sistemas TextProperty="Nome" ValueProperty="Id" @bind-Value=@monitoramento.SistemaId style="display: block; width: 75%" />
                                         </div>
                                         <div class="col-md-12">
-                                            <RadzenRequiredValidator Component="txtIdSistema" Text="É necessário informar um sistema." style="position: absolute"></RadzenRequiredValidator>
+                                            <RadzenRequiredValidator Component="drpSistemas" Text="É necessário informar um sistema." style="position: absolute"></RadzenRequiredValidator>
                                         </div>
                                     </div>
                                 </RadzenFieldset>
